<resources>
    <string name="app_name">ShoppingAndroid</string>

    <string name="description_product_thumbnail">상품 상세 대표 이미지</string>

    <string name="title_product_detail_image">상품설명</string>

    <string name="description_product_detail_image">상품 상세 페이지</string>
    <string name="label_category_icon">카테고리</string>
    <string name="label_home_icon">홈</string>
    <string name="label_cart_icon">장바구니</string>
</resources>