<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--이 메뉴 태그 안에 item 태그를 추가하면 각각 destination이 된다-->
    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/selector_category_icon"
        android:title="@string/label_category_icon" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_home_icon"
        android:title="@string/label_home_icon" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/selector_cart_icon"
        android:title="@string/label_cart_icon" />

    <!--이미지 리소스를 다운받을 때, svg가 가능한 경우, vector drawable로 변환하는 과정을 거치는 게 좋습니다.
        destination(아이콘)이 선택이 된 상태와, 선택 되지 않은 상태에 대한 아이콘 각각을 어떻게 상태에 따라서 보여줄 수 있을까?
        이때 상태를 관리하는 drawable을 정의하는 것이 필요하다.

        drawable 폴더를 선택하고 새로운 파일을 추가한다. root element를 selector로 선택한다.
        selector_home_icon

        selector 태그는 컴포넌트의 상태에 따라서 다른 리소스를 보여줘야 하는 drawable을 만들 경우 사용하는 태그


        지금 현재 이 파일이 다 완성 되고 나면, activity_main.xml의 BottomNavigationView의 app:menu의 속성 값으로 할당하면 됩니다.
    -->

</menu>