<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Toolbar의 android:layout_width를 match_parent로 하는 게 아닌,
        end와 start 기준점을 연결한 이후에는 0dp로 설정해야 한다.
        다른 이름으로는 match constraint로 불리우는 지정된 constraint 만큼 크기를 늘리는 속성으로 변경해야 한다-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--툴바를 제외한 모든 영역에 스크롤이 가능하도록 배치-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_product_detail">

        <!--NestedScrollView의 가장 중요한 제약 조건은 자식 뷰로 추가되는 뷰들을 감싸주는 부모 컨테이너가 필요
            그 container 역할을 하는 constraintlayout을 추가...-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--이미지의 layout_width설정 시,
                이미지의 원래 크기를 나타내는 것이 아닌 제약조건을 추가하고,
                그 크기만큼 최대한 늘릴 것이므로 0dp로 설정한다.
                세로 길이도 가로 길이가 늘어난 만큼 똑같이 늘릴 것이므로, 0dp로 설정한다.
                height크기를 width의 크기만큼 1대1로 늘려주기 위해 dimensionratio 속성에서
                width를 기준으로 1대1 비율로 늘려줘 라고 선언
                마진 값을 양 끝에 주려면, marginstart 및 marginend를 사용-->
            <ImageView
                android:id="@+id/iv_product_thumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/description_product_thumbnail"
                android:src="@drawable/img_pdp_top_01"
                app:layout_constraintDimensionRatio="w, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--가로의 길이를 constraint가 지정된 만큼 최대한 늘릴 것이므로 0dp로 설정합니다-->
            <TextView
                android:id="@+id/tv_product_brand_name"
                style="@style/TextSubtitle3.Grey03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="twg. official"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_product_thumbnail" />

            <TextView
                android:id="@+id/tv_product_label"
                style="@style/TextMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="[19차 리오더] 페이크 레더 숏 테일리 자켓 블랙 (1 Color)"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_brand_name" />

            <TextView
                android:id="@+id/tv_product_discount_rate"
                style="@style/TextMedium.Purple.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="10%"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_label" />

            <TextView
                android:id="@+id/tv_product_discount_price"
                style="@style/TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="99,800원"
                app:layout_constraintBottom_toBottomOf="@id/tv_product_discount_rate"
                app:layout_constraintStart_toEndOf="@id/tv_product_discount_rate"
                app:layout_constraintTop_toTopOf="@id/tv_product_discount_rate" />

            <!--아래의 textview의 baseline을 바로 위 textview랑 맞춰라.
                아래 baseline 속성이 없다면, 아래의 textview는 부모의 맨 꼭대기로 붙는다. 즉 높이가 맨 위로 올라간다(y-axis)-->
            <TextView
                android:id="@+id/tv_product_price"
                style="@style/TextSubtitle2.Grey05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="110,000원"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_product_discount_price"
                app:layout_constraintStart_toEndOf="@id/tv_product_discount_price" />

            <View
                android:id="@+id/view_divider_product"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="#EEEFF1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_price" />

            <TextView
                android:id="@+id/tv_product_detail_image_title"
                style="@style/TextSubtitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_product_detail_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_divider_product" />

            <!--scaleType의 centercrop은 이미지가 이미지뷰의 사이즈보다 클 때는
                이미지의 중앙에 맞추어서 이미지 사이즈를 초과하는 부분은 crop 하는 속성
                막약에 이미지의 크기가 이미지뷰보다 작을 경우 가로나 세로 중에서 가장 큰 길이에 기준을 맞추어서
                확대를 한 다음에 초과하는 부분은 crop 하는 속성-->
            <ImageView
                android:id="@+id/iv_product_detail_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/description_product_detail_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_pdp_top_01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_detail_image_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>